--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,13 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Parisienne';
+  src: url('../public/assets/fonts/Parisienne-Regular.ttf') format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Segoe UI', 'Helvetica Neue', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Parisienne', 'Rolling-Beat', 'Backstreet', 'Embolism Spark',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #F5F5F5;
 }
 
 code {
@@ -18,4 +24,58 @@ code {
 
 #root {
   height: 100vh;
+}
+
+h1.cursive {
+  font-family: 'Parisienne';
+  font-size: 5rem;
+  font-weight: bolder;
+  padding: 20px 10px;
+}
+
+h2 {
+  width: 50%;
+  text-align: center;
+  border-bottom: 1px solid #000;
+  line-height: 0.1rem;
+  margin: 30px 10px;
+  display: block;
+}
+
+h2 span {
+  width: 100%;
+  background: #F5F5F5;
+  padding: 0 10px;
+  font-size: 1.5rem;
+  font-family: 'Arial';
+  font-weight: bold;
+  word-wrap: break-word;
+}
+
+div.content {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+span.card-title {
+  font-family: 'Parisienne';
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+span.card-description {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.modal-backdrop {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: #000000;
+  opacity: 0.7;
+  z-index: 100;
 }
