Add Lobby UI with socket io event emitters and listeners. Remove audio imports from costumePartyDetective.js. Add css for loaders and modal backdrop

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,31 @@ code {
   height: 100vh;
 }
 
+.loader-backdrop {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 15rem;
+  aspect-ratio: 1/1;
+  z-index: 1001;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 h1.cursive {
   font-family: 'Parisienne';
   font-size: 5rem;
